# dujyo-platform

./: .env.beta  .env.beta.backup.20251122_001305  .gitignore  ANALISIS_COMPLETO_DUJYO_ESTRUCTURA_INTERFAZ.md  ANALISIS_EXACTO_TESTS_FALLIDOS.md  ANALISIS_EXHAUSTIVO_SISTEMA.md  ANALISIS_RESULTADOS_TESTING.md  ANALISIS_S2E_FUNCIONALIDADES_FALTANTES.md  APPLE_OAUTH_ALTERNATIVAS.md  ARTIST_TROUBLESHOOTING.md.bak  AUDITORIA_ECONOMICA_S2E_REPORTE.md  CHECKLIST_LANZAMIENTO_MVP.md  CONFIGURACION_OAUTH_COMPLETA.md  CORRECCIONES_ANTI_FARM_IMPLEMENTADAS.md  CORRECCIONES_APLICADAS.md  CSS_PALETTE_UPDATE_SUMMARY.md  DEPLOYMENT_GUIDE.md  DUJYO_ARCHITECTURAL_REVIEW.md  DUJYO_AUDIT_READY_CHECKLIST.md  DUJYO_AUDIT_STATUS_POST_REPARACIONES.md  DUJYO_BLOCKCHAIN_DIFFERENTIATORS.md  DUJYO_FUTURE_PROOF_FIXES.md  DUJYO_GAS_FEES_MVP_IMPROVEMENTS.md  DUJYO_GAS_FEES_PROPOSAL.md  DUJYO_MVP_IMPLEMENTACION_GAS_FEES_REDIS.md  DUJYO_NEXT_AUDIT_PREP.md  DUJYO_REPARACIONES_FINAL.md  DUJYO_REPARACIONES_P0_COMPLETADAS.md  Dockerfile.production  EJECUTAR_TESTS.md  EJECUTAR_TESTS_INSTRUCCIONES.md  ENV_AND_DB_UPDATE_SUMMARY.md  ESTADO_PUSH.md  ESTADO_REAL_OAUTH.md  ESTADO_REPARACIONES.md  EXPLICACION_RESULTADOS.md  FIX_GOOGLE_OAUTH_REDIRECT.md  FIX_ONBOARDING_404.md  FIX_ONBOARDING_REGISTRATION.md  FIX_USER_TYPE_AND_OAUTH.md  (+89 more)
dujyo-backend/: .env  .env.backup.20251122_001305.disabled  .env.test.disabled  .env.testnet.backup.20251122_001305  .env.testnet.disabled  API_VIDEOS_ENDPOINT.md  BLOCK_DUPLICATE_FIX.md  Cargo.toml  Cargo.toml.bak  DATABASE_OPTIMIZATION_README.md  DATABASE_SETUP.md  Dockerfile  test_f64  (+4 more)
(+768 files in other folders)
